--- a/expensetrackersystem/app/src/main/res/drawable/circle_shape.xml
+++ b/expensetrackersystem/app/src/main/res/drawable/circle_shape.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval"
-    android:innerRadius="20dp"
-    >
-    <solid android:color="@color/theme_color1"
-        />
-
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="@android:color/transparent" />
+            <vector
+                android:width="24dp"
+                android:height="24dp"
+                android:viewportWidth="24"
+                android:viewportHeight="24"
+                android:tint="?attr/colorControlNormal">
+                <path
+                    android:fillColor="@color/theme_color1"
+                    android:pathData="M3,18h18v-2L3,16v2zM3,13h18v-2L3,11v2zM3,6v2h18L21,6L3,6z" />
+            </vector>
+        </shape>
+    </item>
+</selector>
